--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+annotated-types==0.6.0
 asgiref==3.7.2
 dj-database-url==2.1.0
 Django==4.2.7
+django-qr-code==3.1.1
+djangorestframework==3.14.0
 gunicorn==21.2.0
 packaging==23.2
 pip==23.2.1
 psycopg2-binary==2.9.9
+pydantic==2.5.2
+pydantic_core==2.14.5
+pytz==2023.3.post1
+segno==1.6.0
 setuptools==65.5.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
